Added partial SOAP client functionality, XSL transformations, object mapping, cleaned up repetitive code, updated gitignore