@@ -1,5 +1,7 @@
 package lt.viko.eif.rgenzuras.sb_sample.db;
 
+import lt.viko.eif.rgenzuras.sb_sample.db.mappers.CustomerMapper;
+import lt.viko.eif.rgenzuras.sb_sample.db.mappers.ItemMapper;
 import lt.viko.eif.rgenzuras.sb_sample.db.repositories.CustomerRepository;
 import lt.viko.eif.rgenzuras.sb_sample.db.repositories.ItemRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,6 +10,7 @@ import lt.viko.eif.rgenzuras.sb_sample.schema.Customer;
 import lt.viko.eif.rgenzuras.sb_sample.schema.Item;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class WebContext {
@@ -17,15 +20,14 @@ public class WebContext {
     @Autowired
     private ItemRepository itemRepository;
 
+    @Autowired
+    private CustomerMapper customerMapper;
+
+    @Autowired
+    private ItemMapper itemMapper;
+
     public List<Customer> getCustomers() {
-        return customerRepository.findAll().stream().map(customer -> {
-            var mappedCustomer = new Customer();
-            mappedCustomer.setID(customer.getID());
-            mappedCustomer.setName(customer.getName());
-            mappedCustomer.setSurname(customer.getSurname());
-            mappedCustomer.setEmail(customer.getEmail());
-            return mappedCustomer;
-        }).toList();
+        return customerRepository.findAll().stream().map(customerMapper::toDTO).collect(Collectors.toList());
     }
 
     public Customer getCustomer(int id) {
@@ -37,14 +39,7 @@ public class WebContext {
     }
 
     public void saveCustomer(Customer customer) {
-        var mappedCustomer = new lt.viko.eif.rgenzuras.sb_sample.model.Customer();
-
-        mappedCustomer.setID(customer.getID());
-        mappedCustomer.setName(customer.getName());
-        mappedCustomer.setSurname(customer.getSurname());
-        mappedCustomer.setEmail(customer.getEmail());
-
-        customerRepository.save(mappedCustomer);
+        customerRepository.save(customerMapper.toModel(customer));
     }
 
     public void deleteCustomer(int id) {
@@ -52,13 +47,7 @@ public class WebContext {
     }
 
     public List<Item> getItems() {
-        return itemRepository.findAll().stream().map(item -> {
-            var mappedCustomer = new Item();
-            mappedCustomer.setID(item.getID());
-            mappedCustomer.setName(item.getItemName());
-            mappedCustomer.setPrice(item.getItemPrice());
-            return mappedCustomer;
-        }).toList();
+        return itemRepository.findAll().stream().map(itemMapper::toDTO).collect(Collectors.toList());
     }
 
     public Item getItem(int id) {
@@ -70,13 +59,7 @@ public class WebContext {
     }
 
     public void saveItem(Item item) {
-        var mappedItem = new lt.viko.eif.rgenzuras.sb_sample.model.Item();
-
-        mappedItem.setID(item.getID());
-        mappedItem.setItemName(item.getName());
-        mappedItem.setItemPrice(item.getPrice());
-
-        itemRepository.save(mappedItem);
+        itemRepository.save(itemMapper.toModel(item));
     }
 
     public void deleteItem(int id) {
